--- a/src/Translation/global.json
+++ b/src/Translation/global.json
@@ -106,7 +106,7 @@
       "shipping": "მიწოდება",
       "checkout": "გადახდა",
       "cart": "კალათა",
-      "add": "კალათაში დამატება",
+      "add": "დამატება",
       "discount": "ფასდაკლება",
       "size": "ზომა",
       "color": "ფერი",
